# GravityStrava

./: .gitignore  activity_debug.json  ai_analysis.py  config.py  main.py  pyproject.toml  strava_api.py  summary_debug.json  test_main.py  withings_api.py
.github/workflows/: ci.yml
app/api/routes/: activities.py  ai.py  auth.py  health.py  views.py
app/core/: config.py  database.py
app/models/: __init__.py
app/services/: analysis.py  strava.py  withings.py
deprecated/: database.py  models.py  strava_api.py
static/css/: dashboard.css
templates/: dashboard.html
